# mtrader

./: .gitignore  MANIFEST.in  README.md  __init__.py  _old_results.npz  data_cleaner.py  indicator_engine.py  monotonic_stack.py  pyproject.toml  test_10_strategies.py  test_percent_targets.py  trading.py  utils.py
.github/workflows/: test.yml
src/mtrader/: __init__.py  advanced.py  backtest.py  data_cleaner.py  exit_strategy.py  indicator_engine.py  indicators.py  live.py  monotonic_stack.py  optimize_exit.py  report.py  strategy_discovery.py  trading.py  utils.py
src/tests/: test_advanced_features.py  test_backtest.py  test_backtest_api.py  test_edge_cases.py  test_live_forward.py  test_random_backtest_scenarios.py
src/tests/scenarios/: test_all.py
