[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtrader"
version = "0.9.0"
description = "Vectorized backtesting & forward-testing framework for intraday strategies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Manjur Ahmed", email = "manjur@tasklipi.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["backtesting", "trading", "algorithmic-trading", "intraday", "technical-analysis"]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "inspecty>=0.1",
]

[project.optional-dependencies]
numba = ["numba>=0.58"]
cupy = ["cupy-cuda12x"]

[project.urls]
Homepage = "https://github.com/manjur-ai/mtrader"
Repository = "https://github.com/manjur-ai/mtrader"
"Bug Tracker" = "https://github.com/manjur-ai/mtrader/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mtrader", "mtrader.*"]
